--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,6 @@
     <string name="open">open</string>
     <string name="close">close</string>
     <string name="title_activity_presion">Presion</string>
+    <string name="title_activity_temperatura">Temperatura</string>
+    <string name="title_activity_longitud">Longitud</string>
 </resources>
